--- a/backend/.env.exemple
+++ b/backend/.env.exemple
@@ -6,3 +6,15 @@ DB_CLUSTER='sauce.uxuadp3.mongodb.net'
 DB_NAME='sauce'
 
 PORT=3000
+
+
+# TOKEN_SECRET= 'Définir Une chaine de caractère ROBUSTE comme token secret'
+
+# DB_USER= "Définir le nom de compte d'utilisateur"               (De la base de données)
+# DB_PASSWORD="Définir le mot de passe du compte utilisateur"     (De la base de données)
+# DB_CLUSTER="Définir le lien du cluster"                         (De la base de données)
+# DB_NAME= "Définir le nom de la base de données"                 (De la base de données)
+
+# PORT= "Définir le Port de connection du serveur"
+
+
