--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,15 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "dotenv": "^16.1.1",
+    "email-validator": "^2.0.4",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.1",
     "mongoose-unique-validator": "^4.0.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "password-validator": "^5.3.0"
   }
 }
